src/k8s-configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: diplom-nginx
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    app: nginx
